--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@ img {
     max-width: 100%;
 }
 
+.container  {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
  /*HEADER*/
 header {
     display:flex;
@@ -34,8 +39,53 @@ a {
 
 
  /*ROW*/
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    height: fit-content;
+}
 
+.card   {
+    width: 792px;
+    height: 1144px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
+.card-frame {
+    width: fit-content;
+    height: fit-content;
+    margin-bottom: 100px;
+}
+.card1  {
+    background-image: url(../img/1.webp);
+}
+
+.card2  {
+    background-image: url(../img/2.webp);
+}
+
+.card3  {
+    background-image: url(../img/3.webp);
+}
+
+.card4  {
+    background-image: url(../img/4.webp);
+}
+
+.card5  {
+    background-image: url(../img/5.webp);
+}
+
+.card6  {
+    background-image: url(../img/6.webp);
+}
+
+.prices {
+    display: flex;
+    
+}
 
 
 
