--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,12 @@ img {
     margin: 0 auto;
 }
 
+.header-container   {
+    max-width: 100vw;
+    margin: 0 auto;
+    background-color: orange;
+}
+
  /*HEADER*/
 header {
     display:flex;
@@ -27,10 +33,16 @@ a {
     color: white;
 }
 
-.header-logo img    {
-    width: 100px;
-    height: 50px;
+.header-logo     {
+    background-image: url("../img/boolean-logo.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 300px;
+    height: 50px
 }
+
+
 
 
 
@@ -46,8 +58,8 @@ a {
 }
 
 .card   {
-    width: 792px;
-    height: 1144px;
+    width: 414px;
+    height: 600px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -57,6 +69,8 @@ a {
     width: fit-content;
     height: fit-content;
     margin-bottom: 100px;
+    margin-top: 20px;
+    margin-left: 20px;
 }
 .card1  {
     background-image: url(../img/1.webp);
@@ -84,9 +98,13 @@ a {
 
 .prices {
     display: flex;
-    
+
 }
 
+.current-price  {
+    color: red;
+    margin-right: 10px;
+}
 
 
 
