--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ a {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    position: relative;
 }
 
 .card-frame {
@@ -95,6 +96,43 @@ a {
 
 .card6  {
     background-image: url(../img/6.webp);
+}
+
+/*HEARTH*/
+.hearth {
+    width:100px;
+    height: 100px;
+    position: absolute;
+    right: 0%;
+    top: 20px;
+    background-color: white;
+    font-size: 100px;
+    text-align: center;
+}
+
+.hearth:hover{
+    color: red;
+}
+
+/*SOSTENIBILITà*/
+.sustainability-tag {
+    background-color: green;
+    color: white;
+    position:absolute;
+    left: 60px;
+    bottom: 20px;
+
+}
+
+/*SALE TAG*/
+.discount-tag   {
+    text-align: center;
+    background-color: red;
+    color: white;
+    position:absolute;
+    left:0;
+    bottom:20px;
+    width: 50px;
 }
 
 /*HOVER CARDS*/
