--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,11 @@ img {
 }
 
 .header-container   {
-    max-width: 100vw;
+    width: 100vw;
     margin: 0 auto;
     background-color: orange;
+    position: fixed;
+    z-index: 1;
 }
 
  /*HEADER*/
@@ -42,7 +44,9 @@ a {
     height: 50px
 }
 
-
+.header-super-container {
+    padding-bottom: 50px;
+}
 
 
 
